maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:13: error: not found: value sommeDesVirages
      sommeDesVirages += keepHandOnSideWall()
      ^